tests/bad_reserved_name_var.stderr
tests/bad_reserved_name_var.sl:3:9: error: SL2008: identifier prefix '__sl_' is reserved
tests/bad_reserved_name_var.sl:3:9: hint: SL2008: rename symbol to avoid '__sl_' prefix
