tests/bad_reserved_name_var.sl
// Verifies bad reserved name variable.
fn main() {
    var __sl_bad i32
}
